--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "axios": "^0.21.0",
-    "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -18,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "eslintConfig": {
     "extends": [
@@ -38,5 +38,20 @@
       "last 1 safari version"
     ]
   },
-	"homepage": "https://rodrigosillos.github.io/url-shortening-api"
+  "homepage": "https://rodrigosillos.github.io/url-shortening-api",
+  "devDependencies": {
+    "gh-pages": "^3.1.0",
+    "webpack": "^5.4.0"
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rodrigosillos/url-shortening-api.git"
+  },
+  "author": "Rodrigo Sillos",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/rodrigosillos/url-shortening-api/issues"
+  }
 }
