--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "webpack": "^4.44.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,8 +41,7 @@
   },
   "homepage": "https://rodrigosillos.github.io/url-shortening-api",
   "devDependencies": {
-    "gh-pages": "^3.1.0",
-    "webpack": "^5.4.0"
+    "gh-pages": "^3.1.0"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
