--- a/package.json
+++ b/package.json
@@ -6,18 +6,21 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "babel-loader": "^8.2.0",
+    "generate-babelrc": "^0.1.2",
+    "html-webpack-plugin": "^4.5.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
+    "svg-url-loader": "^6.0.0",
     "web-vitals": "^0.2.4",
-    "webpack": "^4.44.2"
+    "webpack": "^4.44.2",
+    "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "webpack-dev-server --mode development --open --hot",
+    "build": "webpack --mode production",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
@@ -41,7 +44,9 @@
   },
   "homepage": "https://rodrigosillos.github.io/url-shortening-api",
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "gh-pages": "^3.1.0",
+    "webpack-cli": "^4.2.0"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
