--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "react-scripts": "4.0.0",
     "svg-url-loader": "^6.0.0",
     "web-vitals": "^0.2.4",
-    "webpack": "^4.44.2",
-    "webpack-dev-server": "^3.11.0"
+    "webpack": "^4.44.2"
   },
   "scripts": {
     "start": "webpack-dev-server --mode development --open --hot",
@@ -46,7 +45,8 @@
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "gh-pages": "^3.1.0",
-    "webpack-cli": "^4.2.0"
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
