--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "babel-loader": "^8.2.0",
     "generate-babelrc": "^0.1.2",
     "html-webpack-plugin": "^4.5.0",
     "node-sass": "^4.14.1",
@@ -18,7 +17,7 @@
     "webpack": "^4.44.2"
   },
   "scripts": {
-    "start": "webpack-dev-server --mode development --open --hot",
+    "start": "react-scripts start",
     "build": "webpack --mode production",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
